# MCP_Advanced_Multi_Agent_Ecosystem

./: .env.example  .env.external-mcps  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COMPREHENSIVE_MCP_SERVER_TEST_REPORT.md  CONTEXT_PERSISTENCE_FIXES_VERIFICATION_REPORT.md  CONTEXT_PERSISTENCE_TEST_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  MCP_COMPREHENSIVE_E2E_TEST_REPORT.md  NANOGPT_SUBSCRIPTION_ROUTING_ARCHITECTURE.md  PHASES_9-11_IMPLEMENTATION_COMPLETE.md  PHASES_9-11_TEST_REPORT.md  PHASE_6_COMPLETE.md  README.md  REMAINING_PHASES.md  VS_CODE_GIT_STATUS_FIX.md  batch-commits.sh  git-batching-implementation-plan.md  git-fix-solutions.md  git-repository-analysis-report.md  test-phase1-e2e.sh  test-phases-9-11.sh
MCP_structure_design/: BUILD_AND_INSTALL.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_E2E_TEST_REPORT.md  E2E_TESTING_EXECUTIVE_SUMMARY.md  EXISTING_MCP_RESEARCH.md  FINAL_IMPLEMENTATION_PLAN.md  GO_REWRITE_ARCHITECTURE_PLAN.md  GO_REWRITE_COMPLETION_SUMMARY.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_PLAN.md  LOCAL_MAC_DEVELOPMENT_PLAN.md  MCP_ADVANCED_MULTI_AGENT_DOCUMENTATION_AUDIT_REPORT.md  MCP_ADVANCED_MULTI_AGENT_ECOSYSTEM_IMPLEMENTATION_PLAN.md  MCP_INTEGRATION_TEST_FRAMEWORK.md  MCP_INTEGRATION_TEST_REPORT.md  MCP_SERVER_SEARCH_STRATEGY.md  MCP_SERVER_TEST_REPORT.md  MULTI_TOOL_SETUP_GUIDE.md  PHASE1_ARCHITECTURE_ANALYSIS.md  PHASE1_MULTI_AGENT_INTEGRATION_ANALYSIS.md  PHASE2_CONFIGURATION_DEPLOYMENT.md  PHASE2_IMPLEMENTATION_COMPLETION.md  PHASE2_TESTING_VALIDATION_STRATEGY.md  PHASE4_COMPREHENSIVE_TEST_REPORT.md  ROO_GIT_MCP_FIX_CONFIGURATION.md  SECURITY_HARDENING_PLAN.md  deploy_all.sh  (+6 more)
MCP_structure_design/MCP_Advanced_Multi_Agent_Ecosystem/: README.md  package.json  pyproject.toml
MCP_structure_design/MCP_Advanced_Multi_Agent_Ecosystem/scripts/: configure-tools.sh  install-mcp-servers.sh  setup.sh  test-installation.sh
MCP_structure_design/mcp-servers/context-persistence/: pyproject.toml
MCP_structure_design/mcp-servers/context-persistence/src/context_persistence/: __init__.py  server.py
src/mcp-servers/context-persistence/: PHASE_6_TEST_COVERAGE_REPORT.md  coverage.xml  debug_import.py  pyproject.toml  pytest.ini  test_context_persistence.py
src/mcp-servers/context-persistence/src/context_persistence/: entity_extractor.py  hybrid_search.py  knowledge_graph.py  models_enhanced.py  server.py
src/mcp-servers/context-persistence/tests/: README.md  test_entity_extractor.py  test_hybrid_search.py  test_import.py  test_knowledge_graph.py  test_models_enhanced.py
(+365 files in other folders)
